--- a/Bai3CRUDApi/src/main/resources/application.yaml
+++ b/Bai3CRUDApi/src/main/resources/application.yaml
@@ -1,11 +1,11 @@
 server:
-  port: 8082
+  port: 8081
   servlet:
     context-path: /
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/crudpai"
+    url: "jdbc:mysql://localhost:3306/api"
     username: root
     password: 16092004
   jpa:
