--- a/CRUD_API/src/main/resources/application.yaml
+++ b/CRUD_API/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
+
 server:
   port: 8082
   servlet:
@@ -5,7 +6,7 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/crudpai"
+    url: "jdbc:mysql://localhost:3306/crudapi"
     username: root
     password: 16092004
   jpa:
@@ -14,3 +15,5 @@ spring:
     show-sql: true
   thymeleaf:
     cache: false
+storage:
+  location: D:\\SPKT\\LTWEB24-25
